src/objects/Collaboration_Team__c.object
<CustomObject>
    <description>Campaign: Collaboration team for Campaign</description>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Collaboration Team</relationshipLabel>
        <relationshipName>Collaboration_Team</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Collaboration_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Role__c</fullName>
        <formula>Member_Name__r.UserRole.RollupDescription</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Required__c</fullName>
        <label>Resource Required</label>
        <type>TextArea</type>
    </fields>
    <label>Collaboration Team</label>
    <nameField>
        <displayFormat>CTM-{0000}</displayFormat>
        <label>Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaboration Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>